--- a/domain-service/pom.xml
+++ b/domain-service/pom.xml
@@ -5,7 +5,7 @@
     <dependencies>
         <dependency>
             <groupId>com.example</groupId>
-            <artifactId>domain</artifactId>
+            <artifactId>domain-model</artifactId>
             <scope>compile</scope>
         </dependency>
     </dependencies>
