setup infra layer

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>domain-service</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>infrastructure</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
